# rust-examples

./: Cargo.toml
examples/: closure_demo1.rs  closure_demo2.rs  closure_demo3.rs  closure_demo4.rs  closure_demo5.rs  crossbeam_demo1.rs  crossbeam_demo2.rs  crossbeam_demo3.rs  dst_demo1.rs  enum_demo1.rs  enum_demo2.rs  enum_demo3.rs  enum_demo4.rs  fib_demo.rs  find_small.rs  iter_demo1.rs  iter_demo2.rs  iter_demo3.rs  iter_demo4.rs  new_type_demo1.rs  pool_demo.rs  quick_sort.rs  rayon_demo1.rs  rayon_demo2.rs  recursion.rs  thread_demo1.rs  thread_demo2.rs  thread_demo3.rs  thread_demo4.rs  thread_demo5.rs  thread_demo6.rs  thread_demo7.rs
examples/code/: Cargo.toml
examples/code/examples/: dichotomy.rs
examples/code/src/: main.rs
src/: lib.rs
src/closure_demo/: Cargo.toml  main.rs
src/trait_demos/: Cargo.toml  generic.rs  generic1.rs  main.rs  trait_demo.rs
src/u256_test/: Cargo.toml  main.rs
