[package]
name = "rust-examples"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand ={ version = "*"}
num-traits = "0.2.14"
num-derive = "0.3.3"
thread_local = "1.1.7"
crossbeam = "0.8.2"
threadpool = "1.8.1"
ring = "0.16.20"
walkdir = "2.3.2"
num_cpus = "1.15.0"
rayon = "1.7.0"